--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,9 @@ body {
   font-family: "Space Grotesk", sans-serif;
 }
 * {
+  font-family: "Space Grotesk", sans-serif;
   box-sizing: border-box;
+}
+p {
+  line-height: 1.7;
 }
