--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -922,8 +922,8 @@ header .right .menu-icon {
   height: 100%;
   background-color: #21262c;
   opacity: 0;
-  position: absolute;
   z-index: -1;
+  top: 0;
 }
 
 @keyframes transform {
