--- a/src/scss/pages/router/_navbar.scss
+++ b/src/scss/pages/router/_navbar.scss
@@ -204,8 +204,8 @@ header {
     height: 100%;
     background-color: $black-color;
     opacity: 0;
-    position: absolute;
     z-index: -1;
+    top: 0;
   }
 }
 
