--- a/src/scss/pages/Products/_product-card.scss
+++ b/src/scss/pages/Products/_product-card.scss
@@ -56,6 +56,13 @@
       position: relative;
       z-index: 1;
       overflow: hidden;
+      a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
       svg {
         color: rgba(38, 43, 50, 1);
