--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -785,9 +785,10 @@ header {
   width: 100%;
   position: absolute;
   color: #ffffff;
+  height: 75px;
 }
 header nav {
-  min-height: 74px;
+  height: 75px;
 }
 header nav .pc-nav > li > a {
   padding: 25px 20px;
@@ -1549,11 +1550,6 @@ footer .email {
     padding: 0 50px 0 0;
   }
 }
-@media (min-width: 992px) {
-  .products-container .left {
-    padding: 0 80px 0 0;
-  }
-}
 .products-container .left h1 {
   font-size: 1.8rem;
   color: #343f52;
@@ -1583,8 +1579,41 @@ footer .email {
   text-decoration: underline;
 }
 
+.price-inputs {
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .price-inputs {
+    flex-wrap: wrap;
+  }
+  .price-inputs span {
+    display: none;
+  }
+}
+.price-inputs input {
+  width: 80px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  color: #60697b;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+}
+.price-inputs input:focus {
+  outline: none;
+}
+
+#price-btn {
+  margin-top: 20px;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 10px 20px;
+  border-radius: 50px;
+  background-color: #3f78e0;
+  color: #ffffff;
+  font-weight: bold;
+}
+
 .single-product {
-  padding: 80px 15px 100px;
+  padding: 75px 15px 100px;
   background-color: #fefefe;
 }
 
@@ -1739,16 +1768,6 @@ footer .email {
   -o-transform: translateY(-10px);
 }
 
-.swiper-width {
-  width: 100%;
-  height: 100%;
-}
-@media (min-width: 992px) {
-  .swiper-width {
-    width: 55%;
-  }
-}
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -1784,7 +1803,7 @@ footer .email {
 .mySwiper .swiper-left,
 .mySwiper .swiper-right {
   position: absolute;
-  top: 35% !important;
+  top: 45% !important;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -1827,11 +1846,12 @@ footer .email {
 }
 .mySwiper .swiper-pagination .swiper-pagination-bullet {
   width: 25% !important;
-  height: 140px !important;
+  height: auto !important;
+  max-height: 6rem;
 }
 @media (min-width: 992px) {
   .mySwiper .swiper-pagination .swiper-pagination-bullet {
-    height: 150px !important;
+    max-height: 7.5rem !important;
   }
 }
 .mySwiper .swiper-pagination .swiper-pagination-bullet img {
@@ -1843,9 +1863,19 @@ footer .email {
   background: transparent !important;
 }
 
+.swiper-width {
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 992px) {
+  .swiper-width {
+    width: 50%;
+  }
+}
+
 @media (min-width: 992px) {
   .prod-text {
-    width: 45%;
+    width: 50%;
   }
 }
 
@@ -1914,6 +1944,10 @@ footer .email {
   -o-transform: scale(1.2);
 }
 
+.products {
+  padding-top: 75px;
+}
+
 .products-container {
   padding: 70px 15px;
 }
@@ -1923,14 +1957,15 @@ footer .email {
   background-color: #f6f7f9;
   color: #60697b;
 }
-.product-top a {
+.product-top .a {
+  text-decoration: underline;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
 }
-.product-top a:hover {
+.product-top .a:hover {
   color: #3f78e0;
 }
 .product-top svg {
@@ -2007,6 +2042,162 @@ footer .email {
   color: red !important;
 }
 
+.cart-page {
+  padding: 75px 15px 0;
+  min-height: 80vh;
+}
+
+.cart-content {
+  padding: 80px 0;
+}
+.cart-content .table-scrol {
+  overflow-x: auto;
+}
+.cart-content table {
+  width: 100%;
+  min-width: 600px;
+}
+.cart-content table .img-container {
+  width: 120px;
+  overflow: hidden;
+}
+.cart-content table .img-container img {
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.cart-content table tr {
+  box-shadow: 0px 2px 0 0 #f0f4fd;
+}
+.cart-content table th {
+  padding: 15px;
+  color: #343f52;
+}
+.cart-content table th:first-child {
+  text-align: left;
+}
+.cart-content table .prod-name {
+  text-align: left !important;
+}
+.cart-content table td {
+  text-align: center;
+  padding: 15px;
+  font-size: 0.9rem;
+  color: #60697b;
+}
+.cart-content table td h3 {
+  color: #343f52;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+.cart-content table .prod-remove {
+  cursor: pointer;
+}
+.cart-content .prod-qty {
+  font-size: 1rem;
+}
+.cart-content .qty-icons svg {
+  display: block;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+@media (min-width: 992px) {
+  .table-scrol {
+    width: 65%;
+  }
+}
+
+@media (min-width: 992px) {
+  .sub-total-area {
+    width: 35%;
+  }
+}
+.sub-total-area h1 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #343f52;
+}
+.sub-total-area .sub-total div {
+  padding: 20px 0;
+  box-shadow: 0px 2px 0 0 #f0f4fd;
+}
+.sub-total-area .sub-total div h5 {
+  color: #343f52;
+  font-weight: bold;
+}
+.sub-total-area .checkout-btn {
+  padding: 0 !important;
+  box-shadow: none !important;
+  margin-top: 30px;
+}
+.sub-total-area .checkout-btn a {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  background-color: #3f78e0;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1490196078);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+.cart-loader {
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3554c0;
+}
+.cart-loader span {
+  font-size: 6rem;
+  font-weight: bold;
+  position: relative;
+  display: block;
+  color: white;
+}
+@media (max-width: 768px) {
+  .cart-loader span {
+    font-size: 4rem !important;
+  }
+}
+.cart-loader span::after {
+  content: "";
+  width: 25%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: white;
+  mix-blend-mode: difference;
+  animation: loading 3s linear infinite;
+  -webkit-animation: loading 3s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+    left: 0;
+  }
+  50% {
+    left: 85%;
+  }
+  100% {
+    left: 50;
+  }
+}
 .white-btn,
 .blue-btn {
   cursor: pointer;
