--- a/src/scss/pages/Products/_products.scss
+++ b/src/scss/pages/Products/_products.scss
@@ -1,7 +1,10 @@
 @use "../../varibales/varibales" as *;
 @forward "./product-card";
-@forward "./category";
+@forward "./filter";
 @forward "./single-product";
+.products {
+  padding-top: 75px;
+}
 .products-container {
   padding: 70px 15px;
 }
@@ -9,10 +12,12 @@
   padding: 20px 15px;
   background-color: $secondary-color;
   color: $dark-text;
-  a {
+  .a {
     &:hover {
       color: $blue-btn-color;
     }
+    text-decoration: underline;
+
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
@@ -82,6 +87,7 @@
     }
   }
 }
+
 #sort-item {
   position: absolute;
   z-index: -100000;
