--- a/src/scss/pages/Products/_single-product.scss
+++ b/src/scss/pages/Products/_single-product.scss
@@ -1,6 +1,6 @@
 @use "../../varibales/varibales" as *;
 .single-product {
-  padding: 80px 15px 100px;
+  padding: 75px 15px 100px;
   background-color: $primary-color;
 }
 .single-prod-top {
@@ -156,13 +156,6 @@
   }
 }
 
-.swiper-width {
-  width: 100%;
-  height: 100%;
-  @media (min-width: 992px) {
-    width: 55%;
-  }
-}
 .swiper {
   width: 100%;
   height: 100%;
@@ -197,7 +190,7 @@
   .swiper-left,
   .swiper-right {
     position: absolute;
-    top: 35% !important;
+    top: 45% !important;
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -238,9 +231,10 @@
     gap: 5px;
     .swiper-pagination-bullet {
       width: 25% !important;
-      height: 140px !important;
+      height: auto !important;
+      max-height: 6rem;
       @media (min-width: 992px) {
-        height: 150px !important;
+        max-height: 7.5rem !important;
       }
       img {
         height: 100%;
@@ -253,9 +247,16 @@
     background: transparent !important;
   }
 }
+.swiper-width {
+  width: 100%;
+  height: 100%;
+  @media (min-width: 992px) {
+    width: 50%;
+  }
+}
 .prod-text {
   @media (min-width: 992px) {
-    width: 45%;
+    width: 50%;
   }
 }
 
