--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -1868,6 +1868,11 @@ footer .email {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 991px) {
+  .swiper-width {
+    margin-bottom: 30px;
+  }
+}
 @media (min-width: 992px) {
   .swiper-width {
     width: 50%;
