--- a/src/scss/pages/Products/_single-product.scss
+++ b/src/scss/pages/Products/_single-product.scss
@@ -249,6 +249,9 @@
   }
 }
 .swiper-width {
+  @media (max-width: 991px) {
+    margin-bottom: 30px;
+  }
   width: 100%;
   height: 100%;
   @media (min-width: 992px) {
