--- a/src/scss/pages/Products/_single-product.scss
+++ b/src/scss/pages/Products/_single-product.scss
@@ -4,7 +4,9 @@
   background-color: $primary-color;
 }
 .single-prod-top {
-  flex-wrap: wrap;
+  .container {
+    flex-wrap: wrap;
+  }
   width: 100%;
   background-color: $secondary-color;
   padding: 20px 15px;
