--- a/src/scss/pages/cart/_cart.scss
+++ b/src/scss/pages/cart/_cart.scss
@@ -11,7 +11,9 @@
   }
   table {
     width: 100%;
-    min-width: 600px;
+    @media (max-width: 991px) {
+      min-width: 550px;
+    }
     .img-container {
       width: 120px;
       overflow: hidden;
