--- a/src/scss/app.css
+++ b/src/scss/app.css
@@ -2212,18 +2212,18 @@ footer .email {
 
 .cart-loader {
   width: 100%;
-  height: 75vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #3554c0;
+  background-color: #343f52;
 }
 .cart-loader span {
   font-size: 6rem;
   font-weight: bold;
   position: relative;
   display: block;
-  color: white;
+  color: #cacaca;
 }
 @media (max-width: 768px) {
   .cart-loader span {
